# axxs-cogs

./: .gitignore  README.md  info.json  pyproject.toml
giglist/: __init__.py  aggregator.py  config.py  giglist.py  info.json  models.py  places.py  regions.py  render.py
giglist/providers/: __init__.py  base.py  humanitix.py  jsonld.py  tasguide.py  ticketmaster.py
giglist/regions/tasmania/: places.yaml
tests/: conftest.py  test_giglist_aggregator.py  test_giglist_base.py  test_giglist_cog_orchestration.py  test_giglist_humanitix.py  test_giglist_jsonld.py  test_giglist_live.py  test_giglist_regions.py  test_giglist_render.py  test_giglist_tasguide.py  test_giglist_ticketmaster.py  test_models.py  test_parsing.py  test_places.py  test_providers.py  test_providers_ics.py  test_providers_manual.py  test_providers_rss.py  test_regions.py  test_render.py  test_stores.py
tests/fixtures/: eventbrite_hobart.html  humanitix_hobart_music.html  sample.ics  sample_rss_mec.xml  sample_rss_plain.xml  sample_rss_tribe.xml  tasguide_music.html
whatsonin/: __init__.py  aggregator.py  config.py  info.json  models.py  places.py  regions.py  render.py  whatsonin.py
whatsonin/providers/: __init__.py  base.py  eventbrite.py  ics.py  manual.py  rss.py
whatsonin/regions/: README.md
whatsonin/regions/sydney/: places.yaml
whatsonin/regions/tasmania/: places.yaml
whatsonin/stores/: __init__.py  guild.py  pack.py  place.py
