[project]
name = "whatsonin"
version = "0.1.0"
description = "Red Discord Bot cog for local Eventbrite events via YAML region packs"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "PyYAML>=6.0.0",
    "icalendar>=6.0.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aioresponses>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["whatsonin*", "giglist*"]
